tests/suite/fail/regression/fuzz/fuzz_garbage_3.ny
fn main() { let x = @3 } //~ ERROR
